ajustes no métodos, delete do cobrança pendente
