# app/Controllers/Cobrancas.php
@@ -41,19 +41,24 @@ class Cobrancas extends ResourceController
             $data = $this->request->getJSON();
             $cobranca = $this->model->criarCobranca($data, $apiKey);
 
-            if (empty($cobranca)) {
-                return $this->failServerError('Não foi possível criar a cobranca');
+            if ($cobranca['httpCode'] != 200) {
+                $error = isset($cobranca['body']['errors'])
+                    ? $cobranca['body']['errors'][0]['description']
+                    : 'Erro desconhecido';
+
+                return $this->respond([
+                    'status' => $cobranca['httpCode'],
+                    'error' => $error
+                ], $cobranca['httpCode']);
             }
 
             return $this->respondCreated($cobranca);
         } catch (Exception $e) {
-            // Log do erro
             log_message('error', $e->getMessage());
-
-            // Você pode personalizar a mensagem de erro conforme necessário
-            return $this->failServerError('Ocorreu um erro interno');
+            return $this->failServerError($e->getMessage());
         }
     }
+
 
     public function show($id = null)
     {
@@ -62,19 +67,24 @@ class Cobrancas extends ResourceController
             $apiKey = $headers['access_token'];
             $cobranca = $this->model->buscarCobranca($id, $apiKey);
 
-            if (empty($cobranca)) {
-                return $this->failNotFound('cobrança não encontrada');
+            if ($cobranca['httpCode'] != 200) {
+                $error = isset($cobranca['body']['errors'])
+                    ? $cobranca['body']['errors'][0]['description']
+                    : 'Erro desconhecido';
+
+                return $this->respond([
+                    'status' => $cobranca['httpCode'],
+                    'error' => $error
+                ], $cobranca['httpCode']);
             }
 
-            return $this->respond($cobranca);
+            return $this->respond($cobranca['body']);
         } catch (Exception $e) {
-            // Log do erro
             log_message('error', $e->getMessage());
-
-            // Você pode personalizar a mensagem de erro conforme necessário
-            return $this->failServerError('Ocorreu um erro interno');
+            return $this->failServerError($e->getMessage());
         }
     }
+
 
     public function update($id = null)
     {
@@ -84,20 +94,24 @@ class Cobrancas extends ResourceController
             $data = $this->request->getJSON();
             $cobranca = $this->model->atualizarCobranca($id, $data, $apiKey);
 
-            // Verifica se o código HTTP é 200 e se o corpo da resposta contém detalhes de sucesso
-            if (
-                $cobranca['httpCode'] == 200 && // Aqui você pode adicionar condições para verificar a resposta
-                !empty($cobranca['body'])
-            ) {    // Verifique se o corpo da resposta contém os detalhes necessários
-                return $this->respond($cobranca['body']);
+            if ($cobranca['httpCode'] != 200) {
+                $error = isset($cobranca['body']['errors'])
+                    ? $cobranca['body']['errors'][0]['description']
+                    : 'Erro desconhecido';
+
+                return $this->respond([
+                    'status' => $cobranca['httpCode'],
+                    'error' => $error
+                ], $cobranca['httpCode']);
             }
 
-            return $this->failServerError('Não foi possível atualizar a cobranca');
+            return $this->respond($cobranca['body']);
         } catch (Exception $e) {
             log_message('error', $e->getMessage());
-            return $this->failServerError('Ocorreu um erro interno');
+            return $this->failServerError($e->getMessage());
         }
     }
+
 
     public function delete($id = null)
     {
@@ -106,18 +120,21 @@ class Cobrancas extends ResourceController
             $apiKey = $headers['access_token'];
             $cobranca = $this->model->deletarCobranca($id, $apiKey);
 
-            // Verifica se o código HTTP é 200 e se o corpo da resposta contém detalhes de sucesso
-            if (
-                $cobranca['httpCode'] == 200 && // Aqui você pode adicionar condições para verificar a resposta
-                !empty($cobranca['body'])
-            ) {    // Verifique se o corpo da resposta contém os detalhes necessários
-                return $this->respondDeleted($cobranca['body']);
+            if ($cobranca['httpCode'] != 200) {
+                $error = isset($cobranca['body']['errors'])
+                    ? $cobranca['body']['errors'][0]['description']
+                    : 'Erro desconhecido';
+
+                return $this->respond([
+                    'status' => $cobranca['httpCode'],
+                    'error' => $error
+                ], $cobranca['httpCode']);
             }
 
-            return $this->failServerError('Não foi possível deletar a cobranca');
+            return $this->respondDeleted($cobranca['body']);
         } catch (Exception $e) {
             log_message('error', $e->getMessage());
-            return $this->failServerError('Ocorreu um erro interno');
+            return $this->failServerError($e->getMessage());
         }
     }
 }
